# Cable_TV_Outage_Messenger

./: .env.example  .gitignore  README.md  pyproject.toml  run.py
.ipynb_checkpoints/: chatgpt_brief-checkpoint.txt
angular-app/: angular.json  package-lock.json
angular-app/src/: index.html
angular-app/src/app/: app-module.ts  app.html  app.scss  app.ts
angular-app/src/app/services/: api.service.ts
app/: __init__.py  routes.py
data/: customers.csv  customers_example.csv
static/css/: style.css
static/css/.ipynb_checkpoints/: style-checkpoint.css
static/js/: script.js
templates/: index.html
