[project]
name = "kgm-cables-notifier"
version = "0.3.0"
description = "Local web app for area-based outage notifications via WhatsApp (and optional SMS later)."
requires-python = ">=3.9"
dependencies = [
  "flask>=3.0.0",
  "pandas>=2.0.0",
  "python-dotenv>=1.0.0",
  "httpx>=0.26.0",
  # keep Twilio installed since the code imports it (even if you don't set Twilio env vars yet)
  "twilio>=9.0.0",
]

[tool.uv]
# no extra config needed